Bug 1658140 - Fix percentage background-size on the root when out-of-flow. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D86482